--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@ body {
     background-color: #f8f8f8;
 }
 
+.navigation li {
+    font-family: sans-serif;
+    font-size: 0.95em;
+}
+
 .navigation a {
     color: blue;
+}
+
+.navigation ul {
+    list-style-type: none;
 }
