Add styles to ProductDescription <h3>, ProductSpecifications <h3>, ProductDetails <h3>.

--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,10 @@ body {
 .navigation ul {
     list-style-type: none;
 }
+
+#product_description h3, #product_specifications h3, #product_details h3 {
+    color:black;
+    font-size: 18px;
+    font-weight: 400;
+    background-color: #eaeaea;
+}
