--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,11 @@ body {
     font-style: italic;
     line-height: 16px;
 }
+
+#product_details p {
+    color: #484343;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+}
