--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,24 @@ body {
     background-color: #f8f8f8;
 }
 
+.navigation {
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 1px;
+    border-style: solid;
+    border-color: darkgrey;
+}
+
+#page_footer {
+    border-top: 1px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 0px;
+    border-style: solid;
+    border-color: darkgrey;
+}
+
 .navigation li {
     font-family: sans-serif;
     font-size: 0.95em;
@@ -29,6 +47,12 @@ body {
     line-height: 16px;
 }
 
+#product_description img {
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+
 #product_details p {
     color: #484343;
     font-size: 16px;
@@ -42,7 +66,7 @@ body {
     color:darkslategray;
     line-height: 20px;
     font-size: 14px;
-    list-style-image: url(goods/imgs/smile.jpg);
+    list-style-image: url(goods/imgs/UL_mark.jpg);
 }
 
 #contact_form input[type = "text"], #contact_form textarea {
